# cpp-boilerplate

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: ClangTidy.cmake
src/example/: example.cpp  example.hpp
test/: example_test.cpp
